# apps

./: .gitignore  acinclude.m4
tools/: Makefile.am  configure.ac
tools/fp_control/: Makefile.am  Spark.c  fp_control.c  global.h
tools/libeplayer3/: Makefile.am  README
tools/libeplayer3/container/: container.c  container_ass.c  container_ffmpeg.c  container_textsubtile.c
tools/libeplayer3/include/: container.h  output.h  playback.h  subtitle.h  writer.h
tools/libeplayer3/output/: linuxdvb.c  output.c  output_subtitle.c
tools/libeplayer3/output/writer/: writer.c
tools/libeplayer3/playback/: playback.c
tools/libeplayer3/tools/: eplayer2.c
tools/libmme_host/: Makefile.am
tools/libmmeimage/: Makefile.am  hw_interface.c  libmmeimg_jpeg.c
